# scanfmt

./: Cargo.toml  README.md
scanfmt_macros/: Cargo.toml
scanfmt_macros/src/: fmt.rs  lib.rs
src/: impl_.rs  lib.rs  macro_support.rs  tests.rs
