[workspace]
members = ["scanfmt_macros"]

[package]
name = "scanfmt"
version = "0.1.0"
description = "Scanfmt: easy to use macro for parsing a string"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fee1-dead/scanfmt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scanfmt_macros = { path = "./scanfmt_macros", version = "0.1.0" }