[package]
name = "scanfmt_macros"
description = "Procedural macro for scanfmt"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fee1-dead/scanfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.10"
proc-macro2 = "1.0.20"

[dependencies.syn]
version = "1.0.81"
features = ["full"]